src/objects/Competitor_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Opportunity Reviews</relationshipLabel>
        <relationshipName>Competitors_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Reviews</relationshipLabel>
        <relationshipName>Competitors_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_1__c</fullName>
        <formula>Competitor__r.Strength_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_2__c</fullName>
        <formula>Competitor__r.Strength_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_3__c</fullName>
        <formula>Competitor__r.Strength_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage 3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness_1__c</fullName>
        <formula>Competitor__r.Weakness_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disadvantage 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness_2__c</fullName>
        <formula>Competitor__r.Weakness_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disadvantage 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness_3__c</fullName>
        <formula>Competitor__r.Weakness_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disadvantage 3)</label>
        <type>Text</type>
    </fields>
    <label>Competitor/Opportunity</label>
    <nameField>
        <displayFormat>CO - {0000}</displayFormat>
        <label>Competitor/Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors/Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>